--- a/Week4/css/style.css
+++ b/Week4/css/style.css
@@ -10,7 +10,8 @@ body,html {
 
 body {
 	display: grid;
-	grid-template-rows: 80px 1fr 50px;
+	grid-template-rows: 80px 1fr;
+	grid-template-columns: 250px 1fr;
 	grid-template-areas: 
 	"header header"
 	"sidebar content"
@@ -19,19 +20,25 @@ body {
 
 .header {
 	grid-area: header;
-	padding:10px;
-	background-color: #333;
-	color: white;
+	padding:20px;
+	background-color: #A16AE8;
+	color: rgb(254, 254, 255);
 	font-size: 2em;
+	font-family: Impact, fantasy;
+	text-align: center;
 }
 
 .sidebar {
-	color: white;
+	color: #8742e2;
 	grid-area: sidebar;
 	padding:10px;
-	background-color: #555;
+	background-color: #D2C7FF;
 	overflow: auto;
+	font-family: SANS-SERIF ,Arial Rounded MT Bold;
+	text-align: center;
 }
+
+
 
 .content {
 	grid-area: content;
